[package]
name = "jamsocket-log-collector"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.82"
bollard = "0.16.1"
clap = { version = "4.5.4", features = ["derive"] }
dashmap = "5.5.3"
futures-util = "0.3.30"
serde = { version = "1.0.198", features = ["derive"] }
serde_json = "1.0.116"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tokio-tungstenite = { version="0.21.0", features = ["rustls-tls-webpki-roots"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
